giving c method to rust + csproj trys

--- a/Qint/Qint/MainPage.xaml
+++ b/Qint/Qint/MainPage.xaml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Qint"
              xmlns:wc="clr-namespace:WrapperCore;assembly=WrapperCore"
              x:Class="Qint.MainPage">
 
-    <Label Text="Test"
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" 
-           x:Name="namedeinerwahl"/>
-
-</ContentPage>
+</TabbedPage>
